# ParseStats

./: CMakeLists.txt  ChartStatistics.qml  DataGrid.qml  MenuPage.qml  SettingsDialog.qml  StatisticsPage.qml  Style.qml  datagrid.qml  dataparser.cpp  dataparser.h  main.cpp  main.qml  resources.qrc
